Added global variables file. Minor visual updates

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<p>
-  home works!
-</p>
+<h1>
+  Beep home page
+</h1>
 <md-input-container>
   <input mdInput placeholder="Favorite food" value="Sushi">
 </md-input-container>
