--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!--The whole content below can be removed with the new code.-->
-<md-sidenav-container class="main-container">
-  <md-sidenav #sidenav class="sidenav">
+<md-sidenav-container>
+  <md-sidenav mode="side" #sidenav class="sidenav">
     <app-navmenu></app-navmenu>
   </md-sidenav>
-  <div class="container-fluid">
-      <button class="sidenva-toggle" type="button" md-button (click)="sidenav.open()">
-        Open sidenav
+  <div class="main-container container">
+      <button class="sidenav-toggle" type="button" md-button (click)="sidenav.toggle()">
+        <i class="glyphicon glyphicon-list"></i>
       </button>
 
       <router-outlet></router-outlet>
