Added beeps component

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -4,4 +4,9 @@
             <span class='glyphicon glyphicon-home'></span> Home
         </a>
     </li>
+    <li [routerLinkActive]="['link-active']"> 
+        <a [routerLink]="['/beeps']">
+            <span class='glyphicon glyphicon-certificate'></span> Beeps
+        </a>
+    </li>
 </ul>
