--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <h1>
-  Beep home page
+  {{title}}
 </h1>
 <md-input-container>
-  <input mdInput placeholder="Favorite food" value="Sushi">
+  <input mdInput placeholder="Favorite food" (keyup)="updateTitle($event)" value="Sushi">
 </md-input-container>
