--- a/src/app/beep-form/beep-form.component.html
+++ b/src/app/beep-form/beep-form.component.html
@@ -1,6 +1,6 @@
 <h1>Beep form</h1>
 <form  #beepForm="ngForm" (ngSubmit)="onSubmit(beepForm.value)" action="http://localhost:49960/api/values/SaveBeeper">
-  <input type="hidden" name="Id">
+  <input type="hidden" [(ngModel)]="model.Id" name="Id">
   <div class="form-group">
     <md-input-container>
       <input mdInput placeholder="Beep name" 
@@ -43,6 +43,13 @@
     <div [hidden]="eyes.valid || eyes.pristine " class="alert alert-danger">
       Name is required
     </div>
+  </div>
+
+  <div class="form-group">
+    <textarea class="form-control"
+              [(ngModel)]="model.Description" 
+              name="Description" 
+              placeholder="Description"></textarea>
   </div>
 <button type="submit" md-raised-button>
   <span>Submit</span>
