--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -1,12 +1,12 @@
 <ul class='nav navbar-nav'>
     <li [routerLinkActive]="['link-active']"> 
         <a [routerLink]="['/home']">
-            <span class='glyphicon glyphicon-home'></span> Home
+            <i class="material-icons nav-icon">home</i> Home
         </a>
     </li>
     <li [routerLinkActive]="['link-active']"> 
         <a [routerLink]="['/beeps']">
-            <span class='glyphicon glyphicon-certificate'></span> Beeps
+            <i class="material-icons nav-icon">flare</i> Beeps
         </a>
     </li>
 </ul>
