--- a/src/app/navmenu/navmenu.component.css
+++ b/src/app/navmenu/navmenu.component.css
@@ -1,11 +1,15 @@
 .nav.navbar-nav li.link-active a {
-    background: #337ab7;
+    background: #039be5;
     color: white;
 }
 
 .nav.navbar-nav li {
     display: block;
     float: none;
+}
+
+.nav.navbar-nav li a {
+    color: #039be5;
 }
 
 .nav.nav.navbar-nav {
