--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,29 @@
 <h1>
   {{title}}
 </h1>
+<base href="/src/">
 
-<md-input-container>
-  <input mdInput placeholder="Favorite food" (keyup)="updateTitle($event)" value="Sushi">
-</md-input-container>
+<carousel [interval]="8000" noPause="false">
+  <slide>
+    <img src="/assets/images/starry.jpg" class="slider-img"/>
+    <div class="carousel-caption">
+      <h3>Some inspiring quote</h3>
+      <p>On a starry background</p>
+    </div>
+  </slide>
+  <slide>
+    <img src="/assets/images/earth-and-moon.jpg" class="slider-img"/>
+    <div class="carousel-caption">
+      <h3>Another inspiring quote</h3>
+      <p>With very obvious meaning</p>
+    </div>
+  </slide>
+  <slide>
+    <img src="/assets/images/galaxy.jpg" class="slider-img" />
+    <div class="carousel-caption">
+      <h3>Some more inspiration for you</h3>
+      <p>With another cosmic background</p>
+    </div>
+  </slide>
+</carousel>
+
