--- a/src/app/beep-form/beep-form.component.html
+++ b/src/app/beep-form/beep-form.component.html
@@ -1,62 +1,66 @@
-<h1>Beep form</h1>
-<form #beepForm="ngForm" (ngSubmit)="onSubmit(beepForm.value)" action="http://localhost:49960/api/values/SaveBeeper">
-
-  <input type="hidden" [(ngModel)]="model.Id" name="Id">
-
-  <div class="form-group">
-    <md-input-container>
-      <input mdInput placeholder="Beep name" 
-      type="text" 
-      required
-      [(ngModel)]="model.Name" name="Name" #name="ngModel">
-      <md-error>Name is required</md-error>
-    </md-input-container>
-    <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-      Name is required
+<div class="form-container">
+  <h1>Beep form</h1>
+  <form #beepForm="ngForm" (ngSubmit)="onSubmit(beepForm.value)" action="http://localhost:49960/api/values/SaveBeeper">
+    <input type="hidden" [(ngModel)]="model.Id" name="Id">
+    <div class="form-group">
+      <md-input-container>
+        <input mdInput placeholder="Beep name" 
+        type="text" 
+        required
+        [(ngModel)]="model.Name" name="Name" #name="ngModel">
+        <md-error>Name is required</md-error>
+      </md-input-container>
+      <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+        Name is required
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-  <md-select placeholder="Gender" [(ngModel)]="model.Gender" name="Gender">
-    <md-option *ngFor="let item of genders" [value]="item">
-      {{item}}
-    </md-option>
-  </md-select>
-  </div>
+    <div class="form-group">
+    <md-select placeholder="Gender" [(ngModel)]="model.Gender" name="Gender">
+      <md-option *ngFor="let item of genders" [value]="item">
+        {{item}}
+      </md-option>
+    </md-select>
+    </div>
 
-  <div class="form-group">
-    <md-input-container>
-      <input mdInput [mdDatepicker]="dateOfBirthPicker"
-            placeholder="Date of birth" 
-            type="text" 
-            [(ngModel)]="model.DateOfBirth" name="DateOfBirth">      
-    </md-input-container>
-    <button [mdDatepickerToggle]="dateOfBirthPicker"></button>
-    <md-datepicker #dateOfBirthPicker></md-datepicker>
-  </div>
+    <div class="form-group date-field">
+      <md-input-container>
+        <input mdInput [mdDatepicker]="dateOfBirthPicker"
+              placeholder="Date of birth" 
+              type="text" 
+              [(ngModel)]="model.DateOfBirth" name="DateOfBirth">      
+      </md-input-container>
+      <button [mdDatepickerToggle]="dateOfBirthPicker"></button>
+      <md-datepicker #dateOfBirthPicker></md-datepicker>
+    </div>
 
-  <div class="form-group">
-    <md-input-container>
-      <input mdInput placeholder="Eyes count" 
-      minValue = 0
-      maxValue = 5
-      type="number" 
-      [(ngModel)]="model.EyesCount" name="EyesCount" #eyes="ngModel">
-      <md-error [ngClass]="{'hidden':!eyes.hasError('max-exceed')}">Eyes count is too high. Try less.</md-error>
-      <md-error [ngClass]="{'hidden':!eyes.hasError('min-exceed')}">Eyes count is too low. Try more.</md-error>
-    </md-input-container>
-  </div>
+    <div class="form-group">
+      <md-input-container>
+        <input mdInput placeholder="Eyes count" 
+        minValue = 0
+        maxValue = 5
+        type="number" 
+        [(ngModel)]="model.EyesCount" name="EyesCount" #eyes="ngModel">
+        <md-error [ngClass]="{'hidden':!eyes.hasError('max-exceed')}">Eyes count is too high. Try less.</md-error>
+        <md-error [ngClass]="{'hidden':!eyes.hasError('min-exceed')}">Eyes count is too low. Try more.</md-error>
+      </md-input-container>
+    </div>
 
-  <div class="form-group">
-    <md-input-container>
-      <textarea mdInput
-                [(ngModel)]="model.Description" 
-                name="Description" 
-                placeholder="Description"></textarea>
-    </md-input-container>
-  </div>
-<button type="submit" [disabled]="!beepForm.form.valid" md-raised-button color="primary">
-  <span>Submit</span>
-</button>
-<a class="btn btn-link" [routerLink]="['/beeps']">To beep list</a>
-</form>
+    <div class="form-group">
+      <md-input-container>
+        <textarea mdInput
+                  [(ngModel)]="model.Description" 
+                  name="Description" 
+                  placeholder="Description"></textarea>
+      </md-input-container>
+    </div>
+
+  <button type="submit" [disabled]="!beepForm.form.valid" md-raised-button color="primary">
+    <span>Submit</span>
+  </button>
+  <button type="button" md-button [routerLink]="['/beeps']">
+    <span>To beep list</span>
+  </button>
+
+  </form>
+</div>
