--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,13 @@
 .page-content {
     padding-top: 2rem;
 }
+
+.content-container {
+    background: white;
+    border: 1px solid rgba(154, 154, 154, 0.22);
+    border-radius: 6px;
+    box-shadow: 0px 0px 4px 4px rgba(162, 162, 162, 0.19);
+    box-sizing: border-box;
+    margin:2rem auto 0;
+    padding: 2rem;
+}
