--- a/src/app/navmenu/navmenu.component.css
+++ b/src/app/navmenu/navmenu.component.css
@@ -1,5 +1,5 @@
 .nav.navbar-nav li.link-active a {
-    background: #039be5;
+    background: #00897b;
     color: white;
 }
 
@@ -9,9 +9,17 @@
 }
 
 .nav.navbar-nav li a {
-    color: #039be5;
+    color: white;
+}
+
+.nav.navbar-nav li a:hover {
+    background: #1e8a6c;
 }
 
 .nav.nav.navbar-nav {
     float: none;
+}
+
+/deep/.mat-sidenav {
+    background: #525065;
 }
