--- a/src/styles.css
+++ b/src/styles.css
@@ -2,19 +2,39 @@
 @import 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css';
 
 .main-container {
-    min-height: 100vh;
+    height: 100%;
+}
+
+.content-wrapper {
+    height: 100%;
+    overflow-y: auto;
 }
 
 .page-content {
-    padding-top: 2rem;
+    padding: 2rem 0 3rem;
+}
+
+@media screen and (max-width: 1260px) {
+    .page-content {
+        margin-left: 4rem;
+    }
 }
 
 .content-container {
-    background: white;
+    background: #525065;
     border: 1px solid rgba(154, 154, 154, 0.22);
     border-radius: 6px;
     box-shadow: 0px 0px 4px 4px rgba(162, 162, 162, 0.19);
     box-sizing: border-box;
+    color: white;
     margin:2rem auto 0;
     padding: 2rem;
+}
+
+.mat-sidenav-content {
+    height: 100vh !important;
+}
+
+.mat-sidenav-container {
+    background: linear-gradient(to bottom, #c5deea 0%,#8abbd7 31%,#066dab 100%);
 }
